--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "es2015",     
     "lib": [
       "es2015",
-      "dom",
+      "dom"
     ],
     "declaration": true,   
     "declarationMap": true,
