--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "contributors": [
     {
       "name": "Nestor Lazcano",
-      "email": "nestor_ronal09@gmail.com"
+      "email": "nestornes11@gmail.com"
     }
   ],
   "repository": {
@@ -32,13 +32,11 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.12",
-    "@types/pdfmake": "^0.1.3",
+    "@types/pdfmake": "^0.1.8",
     "jest": "^23.6.0",
+    "pdfmake": "^0.1.60",
     "ts-jest": "^23.10.5",
     "typescript": "^3.2.2"
-  },
-  "dependencies": {
-    "pdfmake": "^0.1.40"
   },
   "jest": {
     "moduleFileExtensions": [
