--- a/src/package.json
+++ b/src/package.json
@@ -30,14 +30,7 @@
     "email": "insomniocode@gmail.com",
     "url": "https://github.com/Lugriz/pdfmake-wrapper/issues"
   },
-  "devDependencies": {
-    "@types/jest": "^23.3.12",
-    "@types/pdfmake": "^0.1.3",
-    "jest": "^23.6.0",
-    "ts-jest": "^23.10.5",
-    "typescript": "^3.2.2"
-  },
-  "dependencies": {
-    "pdfmake": "^0.1.40"
+  "peerDependencies": {
+    "pdfmake": "^0.1.60"
   }
 }
