--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",          
-    "module": "CommonJS",     
+    "module": "es2015",     
     "lib": [
       "es2015",
       "dom"
