--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "lint": "eslint src",
     "build": "npm run build:client; npm run build:server; npm run create:packagejson; npm run copy:packagejson; npm run copy:readme; npm run copy:license",
     "build:client": "tsc --project ./tsconfig.json",
     "build:server": "tsc --project ./tsconfig.server.json",
@@ -47,6 +48,9 @@
     "@commitlint/config-conventional": "^12.0.1",
     "@types/jest": "^23.3.14",
     "@types/pdfmake": "^0.1.16",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
     "husky": "^5.1.3",
     "jest": "^23.6.0",
     "pdfmake": "^0.1.68",
