--- a/.github/workflows/build-test-lib.yml
+++ b/.github/workflows/build-test-lib.yml
@@ -19,5 +19,7 @@ jobs:
               run: npm install
             - name: Transpile the lib
               run: npm run build
+            - name: Linting the lib
+              run: npm run lint
             - name: Test the lib
               run: npm test
