--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:server": "tsc --project ./tsconfig.server.json",
     "create:packagejson": "node ./scripts/create-package-json-lib.js",
     "copy:license": "cp LICENSE dist/LICENSE",
-    "release": "standard-version && npm run build && cd ./dist",
+    "release": "standard-version && npm run build && cd dist/",
     "prepare": "husky install"
   },
   "author": "Insomniocode <insomniocode@gmail.com>",
