--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
     "ts-jest": "^23.10.5",
     "typescript": "^3.9.10"
   },
+  "peerDependencies": {
+    "pdfmake": "~0.1.72 || 0.2.x"
+  },
   "jest": {
     "moduleFileExtensions": [
       "ts",
